# rost_gen

./: CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  output_template.html  rustfmt.toml  ssg.json
docs/: CNAME  Silver Blaze.html  The Adventure of the Six Napoleans.html  The Adventure of the Speckled Band.html  The Red Headed League.html  index.html  styles.css
src/: main.rs
static-site/: Silver Blaze.html  The Naval Treaty.html
