[package]
name = "rost_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
json-rust = "0.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.48"
serde_with = "2.0.1"
command = "0.0.0"