[package]
name = "rost_gen"
version = "0.9.0"
edition = "2021"
description = "A simple static site generator"
readme = "README.md"
repository = "https://github.com/Eakam1007/rost_gen"
license = "MIT"
keywords = ["ssg"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.48"
serde_with = "2.0.1"
command = "0.0.0"
tempfile = "3"
